--- a/style.css
+++ b/style.css
@@ -89,12 +89,12 @@ header #login:hover {
 .bienvenida .hero h2 {
   font-size: 4rem;
   font-weight: 800;
-  text-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+  text-shadow: 6px 6px rgba(0, 0, 0, 0.2);
 }
 .bienvenida .hero p {
   font-size: 1.3rem;
   margin-top: 1rem;
-  text-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .sobre {
@@ -246,6 +246,29 @@ header #login:hover {
 }
 .contacto form button:hover {
   transform: scale(1.1);
+}
+
+footer {
+  text-align: center;
+}
+footer .footer-container {
+  background: #F4F7FF;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 80px;
+  font-family: var(--text-font);
+}
+footer .footer-container h2 {
+  font-family: var(--text-font);
+  font-size: 25px;
+  color: var(--primary-color);
+}
+footer .footer-container div {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=style.css.map */
