--- a/style.scss
+++ b/style.scss
@@ -111,7 +111,7 @@ header {
     h2 {
         font-size: 4rem;
         font-weight: 800;
-        text-shadow: 0 6px 20px rgba(0,0,0,0.2);
+        text-shadow: 6px 6px rgba(0,0,0,0.2);
     }
 
 
@@ -120,7 +120,7 @@ header {
     p {
         font-size: 1.3rem;
         margin-top: 1rem;
-        text-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        text-shadow: 1px 1px rgba(0,0,0,0.2);
     }
 
 }
@@ -325,4 +325,34 @@ header {
 
     }
 
+}
+
+
+footer {
+
+    text-align: center;
+
+
+    .footer-container {
+    background: #F4F7FF;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 80px;
+    font-family: var(--text-font);
+
+
+    h2 {
+        font-family: var(--text-font);
+        font-size: 25px;
+        color: var(--primary-color);
+    }
+
+    div {
+        display: flex;
+        flex-direction: column;
+    }
+}
 }
