--- a/estilos/estilo-login/login-style.scss
+++ b/estilos/estilo-login/login-style.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-image: url(fondo-login.png);
+    background-image: url("img/fondo-login.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
