--- a/estilos/style.scss
+++ b/estilos/style.scss
@@ -98,7 +98,7 @@ header {
 
     .hero {
     height: 60vh;
-    background-image: url("fondo.png");
+    background-image: url("img/fondo.png");
     background-size: cover;
     background-position: center;
     display: flex;
