--- a/estilos/style.scss
+++ b/estilos/style.scss
@@ -41,6 +41,25 @@ header {
     left: 0;
     width: 100%;
     z-index: 1000;
+    
+    #user-area {
+        display: none;
+    }
+
+    .img-profile {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
+
+
 
     .link {
         a {
@@ -71,6 +90,24 @@ header {
     }
 
     #btn-login {
+        padding: 15px;
+        border-radius: 10px;
+        font-family: var(--text-font);
+        font-weight: bold;
+        color: white;
+        text-shadow: 1px 1px black;
+        background: var(--primary-color);
+        border: none;
+        cursor: pointer;
+        transition: transform 0.3s ease, background 0.3s ease;
+
+        &:hover{
+            transform: scale(1.05);
+            background: #5A67E6;
+        }
+    }
+
+    .logout {
         padding: 15px;
         border-radius: 10px;
         font-family: var(--text-font);
