--- a/estilos/style.scss
+++ b/estilos/style.scss
@@ -383,6 +383,7 @@ footer {
     .redes {
         a {
             text-decoration: none;
+            color: rgb(114, 113, 113);
             margin: 5px;
 
             &:hover {
